模型/Q1/v2/建模思路.md
# Q1 建模思路

owner_name: 罗懿
owner_code: L
owner_role: 建模手
version: v2
status: draft
based_on: 模型/Q1/v1/建模思路.md；模型/Q1/v1/数学模型.md；外部草稿 C:/Users/ZhuanZ/Downloads/问题1数学模型建立.txt；题目信息/A题/附件3.xlsx/Sheet1!A2:H2；题目信息/A题/附件4.xlsx/Sheet1!A1:B14

## 题目分析

问题一是在已知波浪频率、波浪激励力和装置参数的条件下，预测浮子与振子的垂荡位移和速度。装置在垂直方向可抽象为两个相互耦合的质量块：浮子受到波浪激励、附加质量、兴波阻尼和静水恢复力；振子不直接受波浪力，通过弹簧与直线阻尼器和浮子交换能量。

题目给出常量阻尼与速度相关阻尼两种情形。两者共用同一动力学骨架，只需把 PTO 阻尼力分别定义为线性函数和幂律函数，即可避免维护两套不一致的运动方程。

## 数据特征

- 附件 3 在 `ω=1.4005 s⁻¹` 处直接给出垂荡附加质量 `1335.535 kg`、兴波阻尼系数 `656.3616 N·s/m` 和激励力振幅 `6250 N`，无需频率插值。
- 附件 4 给出浮子质量 `4866 kg`、振子质量 `2433 kg`、浮子底半径 `1 m`、圆柱段高度 `3 m`、圆锥段高度 `0.8 m`、海水密度 `1025 kg/m³`、重力加速度 `9.8 m/s²` 和弹簧刚度 `80000 N/m`。
- 由总质量算出的排水体积对应圆柱段吃水约 `2.0000 m`，静水面确在圆柱段内，线性静水恢复刚度 `K_h=ρgπR_f²` 成立。
- 两个物体初始时刻均处于静水平衡，因此位移可统一取相对静平衡位置的增量，重力、静浮力和弹簧预压缩产生的常量项在平衡方程中相消。

## 题型分类

受简谐外力驱动的二自由度受迫振动问题；情形一为线性常系数系统，情形二为含幂律耗散项的非线性常微分方程初值问题。

## 候选方法

1. **L1 线性二自由度模型。** 适用于常量阻尼情形，可直接写成质量—阻尼—刚度矩阵；优点是物理含义清楚并可用频域解交叉验证。
2. **L2 统一相对运动模型。** 用同一个耗散函数同时表示常量阻尼和速度相关阻尼，是本题的主模型；它保留非线性阻尼但不增加题面没有提供的水动力记忆项。
3. **L3 辐射记忆/非线性水动力模型。** 需要额外频谱或时域核函数，附件不支持，当前排除。

## 基准方法

以情形一的线性矩阵模型作为基准。该模型应同时满足静态极限、无阻尼能量极限和简谐稳态频域解，后续数值求解结果可与其交叉核对；v2 已把稳态复振幅解析解写入数学源，作为显式基准。

## 方法对比

L1 能完整覆盖 Q1(1)，但不能表达 Q1(2) 的速度相关阻尼；L2 只增加一个幂律耗散函数即可覆盖两种情形，复杂度增加有题面依据，因此推荐作为统一表达。L3 所需参数缺失，采用后会引入无法验证的自由度。

## 失效模式

- 相对速度符号写反会使阻尼器向系统注入能量；必须保证阻尼功率始终非负。
- 把附加质量加到振子上或把兴波阻尼施加给振子，会改变题面给定水动力的对象。
- 若直接使用绝对坐标而未消去静平衡常量，会重复计入重力、浮力或弹簧预压缩。
- 输出步长 `0.2 s` 是采样间隔，不应被误写成模型自身的连续时间尺度。
- 幂律阻尼若被写成 `c₀|v|^p`（缺少方向因子 `v`），阻尼力方向丢失，模型失效。

## 建模思路

取竖直向上为正方向，分别定义浮子和振子相对静平衡位置的垂荡位移。先由排水体积论证静水面位于圆柱段，得到线性静水恢复刚度；再定义振子相对浮子的位移与速度。弹簧力和阻尼力在两个物体上大小相等、方向相反；对浮子和振子分别应用牛顿第二定律，得到二元二阶微分方程。常量阻尼情形写成矩阵形式并给出稳态复振幅解析解作为校验锚点；速度相关情形通过统一耗散函数替换阻尼项，并以状态空间形式和能量平衡恒等式约束数值求解。最后由连续解在题目规定时刻采样得到交付数据。

## 模型假设

- `[AI-DRAFT][必要假设]` 海水无粘、无旋，入射波为线性周期微幅波。该假设来自题面；若不成立，附件中的线性附加质量和兴波阻尼不足以描述真实水动力。
- `[AI-DRAFT][必要假设]` 中轴、底座、隔层和 PTO 的质量及各种机械摩擦忽略。该假设来自题面；若保留这些因素，需要增加质量和额外耗散参数。
- `[AI-DRAFT][简化假设]` 浮子与振子只做垂荡，且振子始终沿中轴运动。若出现横向摆动或碰撞，二自由度模型失效。
- `[AI-DRAFT][定义性假设]` 位移以静水平衡位置为零点，弹簧预压缩、重力和静浮力的常量部分在平衡关系中消去。若坐标改用几何绝对高度，必须恢复相应常量项。
- `[AI-DRAFT][简化假设]` 给定频率下的附加质量和兴波阻尼在 40 个周期内保持不变。若波浪频率漂移，需要频率插值或更一般的辐射记忆模型。

## 决策记录

### 候选建模方法与比较

当前数学源采用 L2“线性水动力 + 统一幂律 PTO 阻尼”的二自由度模型。降级规则：当幂指数 `p=0` 时模型自动退化为 L1 常量阻尼模型；若后续发现附件参数与指定频率不一致，则停止并回到数据检查阶段。

### 外部草稿比对（v2 触发事件）

对 `模型/Q1/v1/数学模型.md` 与外部草稿 `C:/Users/ZhuanZ/Downloads/问题1数学模型建立.txt` 逐项比对：

- 两者的浮子方程、振子方程、静水恢复刚度 `K_h=ρgπR_f²≈31557.30 N/m`、幂律阻尼力 `−c₀|v_r|^p v_r`、参数取值和零初值完全一致，展开后逐项相同；**结论：两份模型数学上相同，且均无原理性错误**。
- 外部草稿多出两项可取内容：圆柱段吃水深度的显式论证（约 `2.0000 m`）和一阶状态空间形式；两者已吸收进 v2 数学源。
- 外部草稿属于讲解式行文，公式中直接嵌入题面数值、无编号体系、混入求解叙述，不符合数学源合同，故以 v1 为基底优化，不整体替换。

### v2 相对 v1 的改动依据

1. 增加吃水深度论证：把 v1 中“静水面位于圆柱段”的断言变成可复核的排水体积计算，支撑 `K_h` 取值。
2. 增加状态空间演化方程（Q1-5）：为 `algorithm-spec` 提供直接可实现的一阶形式，并附幂律情形的解存在唯一性说明。
3. 增加常量阻尼稳态复振幅解析解（Q1-6）：作为数值解幅值与相位的独立校验锚点。
4. 增加能量平衡恒等式（Q1-7）：作为数值解的能量守恒/耗散校验依据。
5. 增加 PTO 瞬时功率接口（Q1-9）：为 Q2 平均输出功率目标提前定义接口量。

### AI建议

1. 建议把“阻尼系数随速度变化”落实为阻尼力 `D(v)=c₀|v|^p v`。依据是题面先定义阻尼力等于阻尼系数乘相对速度；风险是部分资料会把 `c₀|v|^p` 误当成完整阻尼力；下一检查是做 `D(v)v≥0` 的耗散性验证。
2. 建议数值求解后用式（Q1-6）比较一整个稳态周期的幅值和相位，用式（Q1-7）检查能量残差，两项校验同时通过才交编程手出正式结果。

### 用户确认决策

- v2 owner 确认为 罗懿（L，建模手）。
- 待确认：是否接受五条假设、幂律阻尼力定义及 v2 新增的五项数学内容。未确认前，本模型保持 draft，不登记为正式采用版本。
